# warden-proxy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  package.json  warden.service
.github/workflows/: ci.yml
client/: warden-loader.js  warden-sw.js
docs/: architecture.md  session-capture.md  token-substitution.md
public/: index.html
public/admin/keys/: index.html
public/admin/sessions/: index.html
public/admin/traffic/: index.html
public/apps/ai-chat/: index.html
public/apps/api-tester/: index.html
public/apps/key-manager/: index.html
public/apps/webvm/: index.html  sw.js
src/: access.js  access.rs  capture.rs  client_files.rs  config.js  config.rs  cors.js  index.js  lib.rs  limiter.js  limiter.rs  logger.js  main.rs  proxy.js  proxy.rs  sessions.rs  tokens.rs  traffic.rs  vault.js  vault.rs  websocket.rs
src/commands/: deny.js  init.js  start.js  status.js
test/: proxy.test.js  security.test.js
tests/: access_tests.rs  cookie_merge_tests.rs  integration.rs  limiter_tests.rs  proxy_tests.rs  session_tests.rs  token_tests.rs  traffic_tests.rs  ui-test.js  vault_tests.rs  wcurl-test.sh
