[package]
name = "warden-proxy"
version = "0.2.0"
edition = "2024"
description = "A localhost proxy that gives browser-sandboxed applications safe, controlled access to the outside world"
license = "MIT"
repository = "https://github.com/nwcnwc/warden-proxy"
readme = "README.md"
keywords = ["proxy", "localhost", "browser", "security", "wasm", "ai-agents"]
categories = ["web-programming::http-server", "authentication"]

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
dirs = "6"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
wry = { version = "0.48", optional = true }

[features]
default = []
session-capture = ["wry"]

[profile.release]
opt-level = 3
lto = true
strip = true
